...
    </View>
  }

  return (
    <View style={[{display: 'flex', alignItems: 'center'}, style.background]}>
      <Text
        testID="title"
        style={[
          {
            color: themeStyle.SECONDARY_COLOR,
          },
          style.largeText,
        ]}>
        Last Time
      </Text>

      <QuestionContainer
        question={lastQuestionInfo.questionWithAnswer}
        correctAnswer={lastQuestionInfo.correctAnswer}
        isCorrect={lastQuestionInfo.isCorrect}
      />

      <ResultContainer result={lastQuestionInfo.isCorrect} />
    </View>
...
